# omiryn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  index.html  package.json  pyproject.toml  requirements.txt
api/: index.py
db/: schema.sql
docs/: api-contract.md  architecture.md  chatgpt-action-openapi.yaml  commits.md  dating-market-research.md  gcp-deployment.md  mvp-roadmap.md
infra/gcp/: README.md  apis.tf  artifact-registry.tf  cloud-run.tf  cloud-sql.tf  iam.tf  load-balancer.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
llm/: onboarding-agent.md  profile-extraction.schema.json
scripts/: assign_legacy_data_to_user.py  backfill-profile-facts.sh  backfill_profile_facts.py  db-init.sh  db-up.sh  db_backup.py  deploy-release.sh  encrypt_existing_sensitive_data.py  migrate_sqlite_to_postgres.py  reset-data.sh  reset_data.py  setup.sh  start.sh
scripts/data_ops/: assign-legacy-data-to-user.sh  backfill_profile_facts.py  encrypt-existing-sensitive-data.sh  encrypt_existing_sensitive_data.py  migrate-sqlite-to-postgres.sh  reset_data.py
scripts/db/: db-backup.sh  db-check.sh  db-down.sh  db-init.sh  db-up.sh  db_backup.py  reset-data.sh  reset_data.py
scripts/docker/: docker-build.sh  docker-common.sh  docker-run.sh  docker-shell.sh
src/: auth.py  matchmaking.js  storage.py  text_vectors.py
tests/: conftest.py  test_agent_architecture.py  test_agent_control_framework.py  test_agent_evals.py  test_agent_submissions.py  test_extraction.py  test_matchmaking.py  test_security_encryption.py
(+116 files in other folders)
