[project]
name = "omiryn"
version = "0.1.0"
description = "AI-assisted matchmaking platform"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
